--- a/vignettes/bitcoin.Rmd
+++ b/vignettes/bitcoin.Rmd
@@ -60,28 +60,20 @@ fit_Gauss2
 AIC(fit_Gauss, fit_Gauss2)
 ```
 
-### D-Vine Copulas
+### D-Vine Copulas 
 
-In the next section we try the Frank copula with a finite value for `maxlag` and a linear v-transform. In this case a 2-parameter v-transform does not add significantly to the model and an infinite value for `maxlag` makes next to no difference in the fit.
-
-The model using a Frank copula seems superior to the ARMA copula model.
+Some preliminary analysis suggests that Frank copulas can work well.
 
 ```{r}
-copmod_Frank <- dvinecopula2(family = "frank",
-                             pars = list(ar = 0.95, ma = -0.85),
-                             maxlag = 30)
-mod_Frank <- vtscopula(copmod_Frank, Vlinear(0.45))
-fit_Frank <- fit(mod_Frank, U, tsoptions = tsoptions)
-
-AIC(fit_Gauss2, fit_Frank)
+copmod <- dvinecopula(family = rep("frank", 10),
+                      pars= as.list(rep(1, 10)))
+mod_mix <- vtscopula(copmod, Vlinear(0.45))
+tsoptions <- list(hessian = FALSE, method = "Nelder-Mead", fulcrum = 0.45)
+fit_mix <- fit(mod_mix, U, tsoptions = tsoptions, control = list(maxit = 4000))
+fit_mix
+AIC(fit_Gauss2, fit_mix)
 ```
 
-We provide plots for the model with Frank copula.
-
-```{r, fig.show='hold', fig.width = 6, fig.height = 3, dev.args =list(pointsize=9)}
-plot(fit_Frank, plotoption = 1)
-plot(fit_Frank, plotoption = 2)
-```
 
 ## Marginal Models
 
@@ -105,9 +97,9 @@ AIC(marg_st, marg_sst, marg_slp, marg_lp, marg_dw, marg_sdw)
 We fit a full model combining the double Weibull margin with the VT-d-vine model.
 
 ```{r,fig.show='hold', dev.args =list(pointsize=9)}
-fullmod <- tscm(fit_Frank, margin = marg_dw)
+fullmod <- tscm(fit_mix, margin = marg_dw)
 fullmod <- fit(fullmod, as.numeric(X), 
-               method = "full", tsoptions = tsoptions)
+               method = "full", tsoptions = tsoptions, control = list(maxit = 4000))
 fullmod
 ```
 
@@ -119,6 +111,52 @@ plot(fullmod, plottype = "vtransform")
 plot(fullmod, plottype = "volprofile")
 plot(fullmod, plottype = "volproxy")
 plot(fullmod, plotoption = 2, plottype = "volproxy")
+```
+
+
+### D-Vine Copulas (second kind)
+
+In the next section we try the Frank copula with a finite value for `maxlag` and a linear v-transform. In this case a 2-parameter v-transform does not add significantly to the model and an infinite value for `maxlag` makes next to no difference in the fit.
+
+The model using a Frank copula seems superior to the ARMA copula model.
+
+```{r}
+copmod_Frank <- dvinecopula2(family = "frank",
+                             pars = list(ar = 0.95, ma = -0.85),
+                             maxlag = 30)
+mod_Frank <- vtscopula(copmod_Frank, Vlinear(0.45))
+fit_Frank <- fit(mod_Frank, U, tsoptions = tsoptions)
+
+AIC(fit_Gauss2, fit_Frank)
+```
+
+We provide plots for the model with Frank copula.
+
+```{r, fig.show='hold', fig.width = 6, fig.height = 3, dev.args =list(pointsize=9)}
+plot(fit_Frank, plotoption = 1)
+plot(fit_Frank, plotoption = 2)
+```
+
+## Full Model
+
+We fit a full model combining the double Weibull margin with the VT-d-vine model.
+
+```{r,fig.show='hold', dev.args =list(pointsize=9)}
+fullmod2 <- tscm(fit_Frank, margin = marg_dw)
+fullmod2 <- fit(fullmod2, as.numeric(X), 
+               method = "full", tsoptions = tsoptions)
+fullmod2
+AIC(marg_dw, fullmod, fullmod2)
+```
+
+```{r,fig.show='hold', dev.args =list(pointsize=9)}
+plot(fullmod2, plotoption = 1)
+plot(fullmod2, plotoption = 2)
+plot(fullmod2, plottype = "margin")
+plot(fullmod2, plottype = "vtransform")
+plot(fullmod2, plottype = "volprofile")
+plot(fullmod2, plottype = "volproxy")
+plot(fullmod2, plotoption = 2, plottype = "volproxy")
 ```
 
 
