--- a/vignettes/tscm_models2.Rmd
+++ b/vignettes/tscm_models2.Rmd
@@ -18,54 +18,15 @@ library(tscopulaplus)
 library(stats4)
 ```
 
-## Gaussian ARMA Process
-
-### Construction
-
-We generate a Gaussian ARMA model.
-
-```{r, fig.show='hold', fig.width = 6, fig.height = 3, dev.args =list(pointsize=9)}
-set.seed(13)
-data1 <- 0.5 + 2*arima.sim(list(ar =0.95, ma =-0.85), 1000)
-ts.plot(data1)
-```
-
-### Estimation 
-
-A model spec can be fitted to data with the generic command `fit`.
-
-```{r}
-copspec <- armacopula(pars = list(ar =0.01, ma =0.01))
-margspec <- margin("norm")
-fullspec <- tscm(copspec, margspec)
-modfit <- fit(fullspec, data1, method = "full")
-modfit
-```
-
-### Plotting
-
-As well as the copula plots we can also plot the marginal fit.
-
-```{r, fig.show='hold', dev.args =list(pointsize=9)}
-plot(modfit, plotoption = 1)
-plot(modfit, plotoption = 2)
-plot(modfit, plotoption = 3)
-plot(modfit, plotoption = 4)
-plot(modfit, plotoption = 5)
-plot(modfit, plottype = "margin")
-```
-
-## VT-D-Vine Process with Skewed Laplace Margin 
+## VT-D-Vine Process (Second kind) with Skewed Laplace Margin 
 
 ### Construction
 
 ```{r}
-copmod <- dvinecopula(
-  family = c("Clayton","t", "Frank", "Gaussian"),
-  pars = list(0.7, c(0.2,5), 1, 0.1),
-  rotation = c(180,0, 0,0)
-)
-copmod
+copmod <- dvinecopula2(family = "joe",
+                       kpacf = "kpacf_arma",
+                       pars = list(ar = 0.9, ma = -0.8),
+                       maxlag = 30)
 vcopmod <- vtscopula(copmod,
                      Vtransform = V2p(delta = 0.5, kappa = 2))
 margmod <- margin("slaplace",
@@ -77,7 +38,7 @@ tscmmod
 ### Simulation
 
 ```{r, fig.show='hold', fig.width = 6, fig.height = 3, dev.args =list(pointsize=9)}
-set.seed(29)
+set.seed(13)
 data2 <- sim(tscmmod, n= 2000)
 hist(data2)
 ts.plot(data2)
@@ -143,8 +104,6 @@ The final two plots show aspect of the fit of the v-transform to the data.
 plot(tscmfit_full, plottype = "volproxy")
 plot(tscmfit_full, plotoption = 2, plottype = "volproxy")
 ```
-
-
 
 
 
