--- a/vignettes/tscm_models2.Rmd
+++ b/vignettes/tscm_models2.Rmd
@@ -18,6 +18,133 @@ library(tscopulaplus)
 library(stats4)
 ```
 
+## Gaussian ARMA Process
+
+### Construction
+
+We generate a Gaussian ARMA model.
+
+```{r, fig.show='hold', fig.width = 6, fig.height = 3, dev.args =list(pointsize=9)}
+set.seed(13)
+data1 <- 0.5 + 2*arima.sim(list(ar =0.95, ma =-0.85), 1000)
+ts.plot(data1)
+```
+
+### Estimation 
+
+A model spec can be fitted to data with the generic command `fit`.
+
+```{r}
+copspec <- armacopula(pars = list(ar =0.01, ma =0.01))
+margspec <- margin("norm")
+fullspec <- tscm(copspec, margspec)
+modfit <- fit(fullspec, data1, method = "full")
+modfit
+```
+
+### Plotting
+
+As well as the copula plots we can also plot the marginal fit.
+
+```{r, fig.show='hold', dev.args =list(pointsize=9)}
+plot(modfit, plotoption = 1)
+plot(modfit, plotoption = 2)
+plot(modfit, plotoption = 3)
+plot(modfit, plotoption = 4)
+plot(modfit, plotoption = 5)
+plot(modfit, plottype = "margin")
+```
+
+## VT-D-Vine Process with Skewed Laplace Margin 
+
+### Construction
+
+```{r}
+copmod <- dvinecopula(
+  family = c("Clayton","t", "Frank", "Gaussian"),
+  pars = list(0.7, c(0.2,5), 1, 0.1),
+  rotation = c(180,0, 0,0)
+)
+copmod
+vcopmod <- vtscopula(copmod,
+                     Vtransform = V2p(delta = 0.5, kappa = 2))
+margmod <- margin("slaplace",
+                  pars = c(mu = 1, scale = 2, gamma = 0.7))
+tscmmod <- tscm(vcopmod, margmod)
+tscmmod
+```
+
+### Simulation
+
+```{r, fig.show='hold', fig.width = 6, fig.height = 3, dev.args =list(pointsize=9)}
+set.seed(29)
+data2 <- sim(tscmmod, n= 2000)
+hist(data2)
+ts.plot(data2)
+```
+
+### Estimation
+
+First fit a marginal model only. 
+
+```{r}
+margfit <- fit(margmod, data2)
+```
+
+Now fit the time series copula model stepwise.
+
+```{r}
+tscmfit_step <- fit(tscmmod, data2)
+tscmfit_step
+coef(tscmfit_step)
+coef(tscmmod)
+```
+
+Final optimization over all parameters.
+
+```{r}
+tscmfit_full <- fit(tscmfit_step, data2, method = "full")
+tscmfit_full
+```
+
+Comparison of model.
+
+```{r}
+AIC(margfit, tscmfit_step, tscmfit_full)
+```
+
+### Plotting
+
+We can plot the estimated v-transform and well as the goodness-of-fit plots for the `dvinecopula` object based on Kendall rank correlations.
+
+The first plots relate to the fitted copula.
+
+```{r, fig.show='hold', dev.args =list(pointsize=9)}
+plot(tscmfit_full, plotoption = 1)
+plot(tscmfit_full, plotoption = 2)
+```
+
+The next plot is the QQplot of the marginal fit.
+
+```{r, fig.show='hold', dev.args =list(pointsize=9)}
+plot(tscmfit_full, plottype = "margin")
+```
+
+The next two plots are the estimated v-transform and the estimated volatility profile function.
+
+```{r, fig.show='hold', dev.args =list(pointsize=9)}
+plot(tscmfit_full, plottype = "vtransform")
+plot(tscmfit_full, plottype = "volprofile")
+```
+
+The final two plots show aspect of the fit of the v-transform to the data.
+
+```{r, fig.show='hold', dev.args =list(pointsize=9)}
+plot(tscmfit_full, plottype = "volproxy")
+plot(tscmfit_full, plotoption = 2, plottype = "volproxy")
+```
+
+
 ## VT-D-Vine Process (Second kind) with Skewed Laplace Margin 
 
 ### Construction
