change to project name

--- a/vignettes/armacopulas.Rmd
+++ b/vignettes/armacopulas.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-library(tscopulaplus)
+library(tscopula)
 ```
 
 ## ARMA Copula Processes
