--- a/vignettes/bitcoin.Rmd
+++ b/vignettes/bitcoin.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-library(tscopulaplus)
+library(tscopula)
 library(stats4)
 library(xts)
 tsoptions <- list(hessian = TRUE, method = "Nelder-Mead", avoidzero= FALSE)
