--- a/vignettes/dvinecopulas.Rmd
+++ b/vignettes/dvinecopulas.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
-library(tscopulaplus)
+library(tscopula)
 ```
 
 ## D-Vine Copula Processes
